[workspace]
members = [
    "openebs-upgrade",
    "plugin",
]

exclude = ["./mayastor"]
resolver = "1"

[workspace.dependencies]
# k8s
kube = { version = "0.94.2", features = ["derive", "runtime"] }
k8s-openapi = { version = "0.22.0", features = ["v1_24"] }

# async
tokio = { version = "1.45.1", features = ["full"] }
futures = "0.3.31"
async-trait = "0.1.83"

# tracing
tracing = { version = "0.1.40", features = ["log"] }

# ser/deser
serde = "1.0.214"
serde_json = "1.0.132"
serde_yaml = "0.9.34"
prettytable-rs = "0.10.0"

# errors
snafu = "0.8.5"
anyhow = "1.0.92"

# misc
clap = { version = "4.5.23", features = ["color", "derive"] }
nu-ansi-term = "0.46.0"
color-eyre = "0.6.3"
semver = "1.0.24"
tempfile = "3.16.0"
lazy_static = "1.5.0"
base64 = "0.22.1"
flate2 = "1.0.35"
humantime = "2.1.0"

# http
url = "2.5.4"
byte-unit = "4.0.19"
bytes = "1.5.0"
