[package]
name = "openebs-upgrade"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "upgrade-job"
path = "src/bin/upgrade-job/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
utils = { path = "../mayastor/dependencies/control-plane/utils/utils-lib" }
upgrade = { path = "../mayastor/k8s/upgrade" }

async-trait = { workspace = true }
clap = { workspace = true, features = ["derive"] }
color-eyre = { workspace = true }
constants = { path = "../mayastor/constants" }
futures = { workspace = true }
k8s-openapi = { workspace = true }
kube = { workspace = true, default-features = true, features = ["derive", "runtime"] }
semver = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
snafu = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
