[package]
name = "kubectl-openebs"
description = "Kubectl Plugin (kubectl-openebs)"
version = "0.7.0"
edition = "2021"

[[bin]]
name = "kubectl-openebs"
path = "src/main.rs"

[features]
default = ["rls"]
rls = ["openapi/tower-client-rls", "rest-plugin/rls"]
tls = ["openapi/tower-client-tls", "rest-plugin/tls"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kubectl-plugin = { path = "../mayastor/k8s/plugin", default-features = false }
rest-plugin = { path = "../mayastor/dependencies/control-plane/control-plane/plugin", default-features = false }
shutdown = { path = "../mayastor/dependencies/control-plane/utils/shutdown"}
openapi = { path = "../mayastor//dependencies/control-plane/openapi", default-features = false, features = ["tower-trace"]  }
kube-proxy = { path = "../mayastor/dependencies/control-plane/k8s/proxy" }
utils = { path = "../mayastor/dependencies/control-plane/utils/utils-lib" }
upgrade = { path = "../mayastor/k8s/upgrade" }
supportability = { path = "../mayastor/k8s/supportability" }
openebs-upgrade = { path = "../openebs-upgrade" }
constants = { path = "../mayastor/constants" }

byte-unit = { workspace = true }
bytes = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true, features = ["color", "derive"] }
k8s-openapi = { workspace = true }
kube = { workspace = true, features = ["derive", "runtime"] }
lazy_static = { workspace = true }
prettytable-rs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }
base64 = { workspace = true }
flate2 = { workspace = true }
nu-ansi-term = { workspace = true }
semver = { workspace = true }
humantime = { workspace = true }
